[gd_scene load_steps=2 format=3 uid="uid://5vedgsbnbcr8"]

[ext_resource type="Script" path="res://playback_controls.gd" id="1_t0n45"]

[node name="PlaybackControls" type="Control" groups=["playback_controls"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t0n45")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -40.0
offset_right = 44.0
grow_horizontal = 2
grow_vertical = 0

[node name="Play" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Pause" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Pause"

[node name="Stop" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Stop
"

[connection signal="pressed" from="HBoxContainer/Play" to="." method="playButtonPressed"]
[connection signal="pressed" from="HBoxContainer/Pause" to="." method="pauseButtonPressed"]
[connection signal="pressed" from="HBoxContainer/Stop" to="." method="stopButtonPressed"]
